security_group.tf
resource "aws_security_group" "ssh" {
  name = "Allow SSH"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 22
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "https" {
  name = "Allow HTTPS"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "all" {
  name = "Allow all ports between nodes"
}

resource "aws_security_group_rule" "in_all" {
  type              = "ingress"
  from_port         = 0
  to_port           = 65535
  protocol          = "ALL"
  cidr_blocks       = formatlist("%s/32", aws_instance.upstream_controlplane.*.private_ip)
  security_group_id = aws_security_group.all.id
}

resource "aws_security_group_rule" "out_all" {
  type              = "egress"
  from_port         = 0
  to_port           = 65535
  protocol          = "ALL"
  cidr_blocks       = formatlist("%s/32", aws_instance.upstream_controlplane.*.private_ip)
  security_group_id = aws_security_group.all.id
}
